# WebRTCConnector

./: .gitignore  CMakeLists.txt  Makefile  ProxyPlugin.vcxproj  ProxyPlugin.vcxproj.filters  ProxyReceiver.vcxproj  ProxyReceiver.vcxproj.filters  ProxySender.vcxproj  ProxySender.vcxproj.filters  README.md  WebRTCConnector.dylib  WebRTCConnector.sln  WebRTCConnector.vcxproj  audio_buffer.hpp  buffer.hpp  client_receiver.hpp  cpp.hint  data_parser.hpp  framework.h  log.cpp  log.h  packet_data.hpp  plugin.cpp  plugin.h  proxy_sender.h  received_control.hpp  received_tile.hpp
.github/workflows/: build.yml
WebRTCConnector/: buffer.hpp  data_parser.hpp  dllmain.cpp  framework.h  log.cpp  log.h  packet_data.hpp  pch.h  plugin.cpp  plugin.h  received_audio.hpp  received_control.hpp  received_tile.hpp
proxy_connector/: CMakeLists.txt  audio_buffer.hpp  buffer.hpp  data_parser.hpp  dllmain.cpp  log.cpp  packet_data.hpp  pch.h  plugin.cpp  plugin.h  received_audio.hpp  received_tile.hpp  tile_queue.hpp
proxy_receiver/: proxy_receiver.cpp
proxy_sender/: proxy_sender.cpp
unused/: Makefile  ProxyPlugin.vcxproj  ProxyPlugin.vcxproj.filters
